# cpp-starter

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
.github/: workflows
.github/workflows/: build.yml  ci-macos.yml  ci-ubuntu.yml  ci-windows.yml
src/: main.cpp
tests/: tests.cpp
