cmake_minimum_required(VERSION 3.26)
project(cpp_starter LANGUAGES CXX)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
add_executable(cpp_starter src/main.cpp)
enable_testing()
find_package(GTest CONFIG REQUIRED)
add_executable(cpp_starter_tests tests/tests.cpp)
target_link_libraries(cpp_starter_tests PRIVATE GTest::gtest_main)
add_test(NAME cpp_starter_tests COMMAND cpp_starter_tests)
